<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
        
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/cart_icon"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/user_icon"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/log_out_icon"
        android:title="@string/logout"
        app:showAsAction="never" />
        
</menu>
